--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
    <style>
+      * {
+         box-sizing: border-box;
+      }
+
       body {
          margin: 0;
          font-family: 'Poppins', sans-serif;
          background: linear-gradient(to bottom, #0186a1, #01a1c1);
       }
 
+      /* --------- NAV RESPONSIVE --------- */
       nav {
          background: #017f99;
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         flex-wrap: wrap;
          padding: 10px;
       }
 
@@ -33,22 +34,22 @@
          display: flex;
          flex-wrap: wrap;
          justify-content: center;
-         align-items: center;
       }
 
       nav ul li {
          position: relative;
-         margin: 0 8px;
+         margin: 5px;
       }
 
       nav ul li a {
          display: block;
-         padding: 15px 20px;
+         padding: 12px 16px;
          color: white;
          text-decoration: none;
          font-weight: 600;
          border-radius: 8px;
-         transition: background 0.3s;
+         transition: 0.3s;
+         font-size: 14px;
       }
 
       nav ul li a:hover {
@@ -62,38 +63,43 @@
          left: 0;
          background: #00677e;
          border-radius: 8px;
-         min-width: 180px;
+         min-width: 150px;
          z-index: 100;
-      }
-
-      nav ul li ul li a {
-         padding: 10px 15px;
-         color: white;
       }
 
       nav ul li:hover>ul {
          display: block;
       }
 
-      .principal {
-         width: 100%;
-         max-height: 700px;
-         object-fit: cover;
-         display: block;
-         background-color: #017f99;
+      nav img {
+         width: 90px;
+         height: auto;
       }
 
+      form input[type="search"] {
+         width: 140px;
+      }
+
+      /* --------- IMAGEN PRINCIPAL AJUSTADA --------- */
+      .principal {
+         width: 100%;
+         height: auto;
+         max-height: 450px;
+         object-fit: cover;
+         display: block;
+      }
+
+      /* --------- BOTONES AYUNTAMIENTO --------- */
       .ayuntamiento {
          background: #005f73;
          color: white;
-         font-weight: bold;
-         display: inline-block;
          padding: 12px 20px;
          border-radius: 10px;
-         margin-top: 15px;
          text-decoration: none;
-         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-         transition: background 0.3s, transform 0.3s;
+         margin-top: 10px;
+         display: inline-block;
+         font-weight: bold;
+         transition: 0.3s;
       }
 
       .ayuntamiento:hover {
@@ -101,44 +107,12 @@
          transform: scale(1.05);
       }
 
-      form {
+      /* --------- BARRA DE BOTONES RESPONSIVE --------- */
+      .barra-extras {
+         width: 90%;
          display: flex;
-         align-items: center;
-         background: white;
-         border-radius: 20px;
-         overflow: hidden;
-         padding: 2px 10px;
-      }
-
-      input[type="search"] {
-         border: none;
-         padding: 8px;
-         outline: none;
-         width: 180px;
-         font-size: 14px;
-      }
-
-      input[type="submit"] {
-         border: none;
-         background: #017f99;
-         color: white;
-         padding: 8px 14px;
-         border-radius: 15px;
-         cursor: pointer;
-         transition: background 0.3s;
-      }
-
-      input[type="submit"]:hover {
-         background: #00b4d8;
-      }
-
-      /* --- NUEVO: Botones adicionales --- */
-      .extras {
-         margin-top: 30px;
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         gap: 15px;
+         justify-content: space-between;
+         margin-top: 20px;
       }
 
       .boton {
@@ -148,135 +122,201 @@
          border-radius: 8px;
          text-decoration: none;
          font-weight: bold;
-         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-         transition: background 0.3s, transform 0.3s;
+         transition: 0.3s;
+         text-align: center;
       }
 
       .boton:hover {
          background: #00b4d8;
          transform: scale(1.05);
       }
+
+      /* --------- VIDEO OVERLAY RESPONSIVE --------- */
+      .overlay {
+         position: fixed;
+         top: 0;
+         left: 0;
+         width: 100%;
+         height: 100%;
+         background: rgba(0, 0, 0, 0.8);
+         display: none;
+         justify-content: center;
+         align-items: center;
+         z-index: 9999;
+         padding: 20px;
+      }
+
+      .video-container {
+         width: 100%;
+         max-width: 700px;
+         position: relative;
+      }
+
+      .cerrar {
+         position: absolute;
+         top: -15px;
+         right: -15px;
+         background: red;
+         color: white;
+         border: none;
+         font-size: 20px;
+         border-radius: 50%;
+         width: 35px;
+         height: 35px;
+         cursor: pointer;
+      }
+
+      video {
+         width: 100%;
+         height: auto;
+         border-radius: 10px;
+      }
+
+      /* --------- RESPONSIVE PARA CELULAR --------- */
+      @media(max-width: 600px) {
+
+         nav ul {
+            flex-direction: column;
+         }
+
+         nav li {
+            width: 100%;
+            text-align: center;
+         }
+
+         nav img {
+            width: 70px;
+         }
+
+         form input[type="search"] {
+            width: 100px;
+         }
+
+         .barra-extras {
+            flex-direction: column;
+            gap: 10px;
+         }
+
+         .boton {
+            width: 100%;
+            text-align: center;
+         }
+      }
    </style>
 </head>
 
 <body>
+
    <center>
+
+      <!-- NAV -->
       <nav>
          <ul>
             <li>
                <a href="#" onclick="reproducirVideo()">
-                  <img src="logoss.png" width="130" height="130" alt="Logo CECYTEM" style="border-radius: 10px;">
+                  <img src="logoss.png" alt="Logo">
                </a>
             </li>
 
             <li>
                <form method="get" action="https://www.google.com/search" target="_blank">
-                  <input type="search" name="q" placeholder="Introducir búsqueda" autofocus required>
+                  <input type="search" name="q" placeholder="Buscar" required>
                   <input type="submit" value="Buscar">
                </form>
             </li>
 
-            <li><p><a href="ciudadanoo.html">CIUDADANO</a></p></li>
+            <li><a href="ciudadanoo.html">CIUDADANO</a></li>
 
             <li>
-               <p><a href="TRAMITE.HTML">TRÁMITE</a></p>
+               <a href="TRAMITE.HTML">TRÁMITE</a>
                <ul>
                   <li><a href="bvh.html">Administrativos</a></li>
                   <li><a href="gestionar.php">Gestionar Trámite</a></li>
                </ul>
             </li>
 
-            <li><p><a href="SOLICITUD.HTML">SOLICITUD</a></p></li>
+            <li><a href="SOLICITUD.HTML">SOLICITUD</a></li>
 
             <li>
-               <p><a href="PAGO.HTML">PAGO</a></p>
+               <a href="PAGO.HTML">PAGO</a>
                <ul>
                   <li><a href="serviciosyderechos.html">Servicios y Derechos</a></li>
-                  <li><a href="http://201.144.206.190/">Pago de Predial</a></li>
-                  <li><a href="http://odapasvalledebravo.dyndns.org/Default.aspx">Pago de Agua</a></li>
-                  <li><a href="https://app.cfe.mx/Aplicaciones/CCFE/MiEspacio/login.aspx">Pago de Luz</a></li>
-                  <li><a href="https://telmex.com/pago_sin_login">Pago Teléfono/Internet</a></li>
-                  <li><a href="https://sseguridad.edomex.gob.mx/infracciones-transito">Multas de Tránsito</a></li>
-                  <li><a href="https://tenencia.edomex.gob.mx/">Tenencia/Refrendo Vehicular</a></li>
-                  <li><a href="https://www.gob.mx/sre/acciones-y-programas/opciones-para-realizar-el-pago-de-pasaporte">Pago de Pasaporte</a></li>
-                  <li><a href="https://smovilidad.edomex.gob.mx/licencias_permisos">Licencia de Conducir</a></li>
+                  <li><a href="http://201.144.206.190/">Predial</a></li>
+                  <li><a href="http://odapasvalledebravo.dyndns.org/Default.aspx">Agua</a></li>
                </ul>
             </li>
 
             <li>
-               <p><a href="DOCUMENTO.HTML">DOCUMENTO</a></p>
+               <a href="DOCUMENTO.HTML">DOCUMENTO</a>
                <ul>
                   <li><a href="galeria2.html">Galería</a></li>
                </ul>
             </li>
 
             <li>
-               <p><a href="visitantes.HTML">VISITANTES</a></p>
+               <a href="visitantes.HTML">VISITANTES</a>
                <ul>
                   <li><a href="index2.php">Registro</a></li>
                </ul>
             </li>
 
             <li>
-               <p><a href="menu8.HTML">OPCIONES DE PAGO Y UBICACIÓN</a></p>
-               <ul>
-                  <li><a href="menu8.HTML">Ver Opciones</a></li>
-               </ul>
+               <a href="menu8.HTML">PAGO/UBICACIÓN</a>
             </li>
 
             <li>
-               <p><a href="informacion.html">INFORMACIÓN</a></p>
-               <ul>
-                  <li><a href="informacion.html">Más Información</a></li>
-               </ul>
+               <a href="informacion.html">INFORMACIÓN</a>
             </li>
 
             <li>
                <a href="index3.php">
-                  <img src="defis.png" alt="Ir al formulario" width="130" height="130" style="cursor:pointer; border-radius: 10px;">
+                  <img src="defis.png" alt="Formulario">
                </a>
             </li>
          </ul>
       </nav>
 
-      <!-- Mantiene solo esta imagen principal -->
+      <!-- IMAGEN PRINCIPAL -->
       <img src="113.jpg" alt="Imagen principal" class="principal">
 
       <p>
          <a href="https://share.google/Q5YCviwYntzpR3B4T" class="ayuntamiento">PORTAL AYUNTAMIENTO VALLE DE BRAVO</a>
       </p>
 
-      <!-- 🔹 Sección con botones -->
-      <div class="extras">
+      <!-- BOTONES -->
+      <div class="barra-extras">
          <a href="#" class="boton" onclick="mostrarVideo()">🎥 Ver Video</a>
          <a href="documento1.pdf" class="boton" download>📄 Descargar Documento</a>
       </div>
+
    </center>
 
+   <!-- VIDEO OVERLAY -->
+   <div id="videoOverlay" class="overlay">
+      <div class="video-container">
+         <button class="cerrar" onclick="cerrarVideo()">✖</button>
+         <video id="videoPlayer" controls autoplay></video>
+      </div>
+   </div>
+
    <script>
-      function reproducirVideo() {
-         const video = document.createElement("video");
-         video.src = "video5.mp4";
-         video.controls = true;
-         video.autoplay = true;
-         video.style.width = "80%";
-         video.style.borderRadius = "15px";
-         video.style.margin = "20px auto";
-         document.body.innerHTML = "";
-         document.body.appendChild(video);
+      function mostrarVideo() {
+         document.getElementById("videoPlayer").src = "vide44.mp4";
+         document.getElementById("videoOverlay").style.display = "flex";
       }
 
-      function mostrarVideo() {
-         const video = document.createElement("video");
-         video.src = "vide44.mp4";
-         video.controls = true;
-         video.autoplay = true;
-         video.style.width = "80%";
-         video.style.borderRadius = "15px";
-         video.style.margin = "20px auto";
-         document.body.innerHTML = "";
-         document.body.appendChild(video);
+      function reproducirVideo() {
+         document.getElementById("videoPlayer").src = "video5.mp4";
+         document.getElementById("videoOverlay").style.display = "flex";
+      }
+
+      function cerrarVideo() {
+         let v = document.getElementById("videoPlayer");
+         v.pause();
+         v.src = "";
+         document.getElementById("videoOverlay").style.display = "none";
       }
    </script>
+
 </body>
 </html>
