--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
          background: #00b4d8;
       }
 
-      /* --- NUEVO: Botones adicionales --- */
       .extras {
          margin-top: 30px;
          display: flex;
@@ -231,22 +230,17 @@
                </ul>
             </li>
 
-            <li>
-               <a href="index3.php">
-                  <img src="defis.png" alt="Ir al formulario" width="130" height="130" style="cursor:pointer; border-radius: 10px;">
-               </a>
-            </li>
+            <!-- ELIMINADO: Botón del formulario (defis.png) -->
          </ul>
       </nav>
 
-      <!-- Mantiene solo esta imagen principal -->
+      <!-- IMAGEN PRINCIPAL (solo 111.jpg) -->
       <img src="111.jpg" alt="Imagen principal" class="principal">
 
       <p>
          <a href="https://share.google/Q5YCviwYntzpR3B4T" class="ayuntamiento">PORTAL AYUNTAMIENTO VALLE DE BRAVO</a>
       </p>
 
-      <!-- 🔹 Sección con botones -->
       <div class="extras">
          <a href="#" class="boton" onclick="mostrarVideo()">🎥 Ver Video</a>
          <a href="documento1.pdf" class="boton" download>📄 Descargar Documento</a>
